--- a/PureJava/org.csstudio.swt.xygraph/build.properties
+++ b/PureJava/org.csstudio.swt.xygraph/build.properties
@@ -1,7 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               html/
 src.includes = .classpath,\
                .project,\
                .settings/,\
