--- a/PureJava/org.csstudio.swt.xygraph.pureJavaTest/org.csstudio.swt.xygraph.pureJavaTest/.classpath
+++ b/PureJava/org.csstudio.swt.xygraph.pureJavaTest/org.csstudio.swt.xygraph.pureJavaTest/.classpath
@@ -2,6 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.csstudio.swt.xygraph"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.core.commands_3.6.0.I20110111-0800.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.draw2d_3.7.1.v20110830-1143.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.equinox.common_3.6.0.v20110523.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.jface_3.7.0.I20110522-1430.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.osgi_3.7.1.R37x_v20110808-1106.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.swt.win32.win32.x86_3.7.1.v3738a.jar"/>
+	<classpathentry kind="lib" path="C:/Users/5hz/Work/java test/eclipse-rcp-indigo-SR1-win32/eclipse/plugins/org.eclipse.swt_3.7.1.v3738a.jar"/>
+	<classpathentry kind="lib" path="lib/org.csstudio.swt.xygraph_1.1.4.201112301033.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
