--- a/RCP_RAP/org.csstudio.swt.xygraph.exampleView/build.properties
+++ b/RCP_RAP/org.csstudio.swt.xygraph.exampleView/build.properties
@@ -2,5 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               lib/PureJava 1.1.4/org.csstudio.swt.xygraph.jar
+               plugin.xml
