--- a/PureJava/org.csstudio.swt.xygraph.pureJavaTest/org.csstudio.swt.xygraph.pureJavaTest/.project
+++ b/PureJava/org.csstudio.swt.xygraph.pureJavaTest/org.csstudio.swt.xygraph.pureJavaTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.csstudio.swt.xygraph.pureJavaTest</name>
+	<name>org.csstudio.swt.xygraph.Examples</name>
 	<comment></comment>
 	<projects>
 	</projects>
