Update example view with widgets view

--- a/RCP_RAP/org.csstudio.swt.xygraph.exampleView/plugin.xml
+++ b/RCP_RAP/org.csstudio.swt.xygraph.exampleView/plugin.xml
@@ -3,11 +3,26 @@
 <plugin>
    <extension
          point="org.eclipse.ui.views">
+      <category
+            id="org.csstudio.swt.xygraph.exampleView.category"
+            name="SWT XYGraph ExampleView">
+      </category>
       <view
-            class="org.csstudio.swt.xygraph.exampleview.SampleView"
+            allowMultiple="true"
+            category="org.csstudio.swt.xygraph.exampleView.category"
+            class="org.csstudio.swt.xygraph.exampleview.XYGraphExampleView"
             icon="icons/AutoScale.png"
             id="org.csstudio.swt.xygraph.exampleView.view"
             name="XYGraph Sample View"
+            restorable="true">
+      </view>
+      <view
+            allowMultiple="true"
+            category="org.csstudio.swt.xygraph.exampleView.category"
+            class="org.csstudio.swt.xygraph.exampleview.WidgetsExampleView"
+            icon="icons/gauge.png"
+            id="org.csstudio.swt.xygraph.exampleView.view1"
+            name="Widgets Sample View"
             restorable="true">
       </view>
    </extension>
