Explicitly update all project configuration settings to target the Java 1.7 execution environment.

--- a/PureJava/org.eclipse.nebula.visualization.widgets/build.properties
+++ b/PureJava/org.eclipse.nebula.visualization.widgets/build.properties
@@ -8,3 +8,4 @@ src.includes = src/,\
                .classpath,\
                .settings/,\
                build.properties
+jre.compilation.profile = JavaSE-1.7
