--- a/PureJava/org.eclipse.nebula.visualization.xygraph/build.properties
+++ b/PureJava/org.eclipse.nebula.visualization.xygraph/build.properties
@@ -21,3 +21,4 @@ src.includes = bin/,\
                html/,\
                examples/,\
                preferences.ini
+jre.compilation.profile = JavaSE-1.7
