--- a/PureJava/org.eclipse.nebula.visualization.xygraph/plugin.xml
+++ b/PureJava/org.eclipse.nebula.visualization.xygraph/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="org.eclipse.nebula.visualization.xygraph.preference.XYPreferenceInitializer">
+            class="org.eclipse.nebula.visualization.xygraph.util.PreferenceInitializer">
       </initializer>
    </extension>
 </plugin>
