Make xygraph bundle dependencies identical to upstream
In preparation for SCI-5737:
*Remove eclipse dependencies
*Move preference classes to the preference plugin
*create ITraceConfigPage in order to be able to make custom TraceConfigPage
*create custom DTraceConfigPage that adds the export button to the TraceConfigPage
*Remove unnecessary code from SingleSourceHelper2 and its implementation

--- a/org.eclipse.nebula.visualization.xygraph.preference/plugin.xml
+++ b/org.eclipse.nebula.visualization.xygraph.preference/plugin.xml
@@ -7,6 +7,8 @@
             class="org.eclipse.nebula.visualization.xygraph.preference.XYPreferenceInitializer">
       </initializer>
    </extension>
+   <!-- Temporarily disactivate this preference page until swt-xy-graph is replaced by the nebula visualization -->
+   <!-- 
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
@@ -16,5 +18,5 @@
             name="XY Graphing">
       </page>
    </extension>
-
+-->
 </plugin>
