Match upstream for meta and build settings
Includes missing about.htmls, gitignores, etc

--- a/PureJava/org.eclipse.nebula.visualization.widgets/build.properties
+++ b/PureJava/org.eclipse.nebula.visualization.widgets/build.properties
@@ -1,11 +1,5 @@
-source.. = src/
+source.. = src/, examples/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
-src.includes = src/,\
-               META-INF/,\
-               .project,\
-               .classpath,\
-               .settings/,\
-               build.properties
-jre.compilation.profile = JavaSE-1.7
+               .,\
+               about.html
