--- a/PureJava/org.eclipse.nebula.visualization.xygraph/build.properties
+++ b/PureJava/org.eclipse.nebula.visualization.xygraph/build.properties
@@ -1,22 +1,7 @@
-source.. = src/
+source.. = src/, examples/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               bin/,\
-               build.properties,\
-               icons/,\
                html/,\
-               preferences.ini,\
-               plugin.xml,\
-src.includes = bin/,\
-               .classpath,\
-               .project,\
-               .settings/,\
-               META-INF/,\
-               build.properties,\
-               src/,\
-               test/,\
-               html/,\
-               examples/,\
-               preferences.ini
-jre.compilation.profile = JavaSE-1.7
+               about.html
+src.includes = html/
